# template-C-cmake

./: CMakeLists.txt  README.md  analysis.cmake  code_beautifier.cmake  main.c  uncrustify.cmake
src/: CMakeLists.txt  main.c
src_tests/: CMakeLists.txt  ExampleTest.cpp
